// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the numbers the Fitness hub shows now a woman, same body, same goal 1`] = `
{
  "bmr": 1533,
  "calorieTarget": 1948,
  "hasMetrics": true,
  "macros": {
    "carbG": 198,
    "fatG": 65,
    "proteinG": 143,
  },
  "missing": [],
  "nutritionGoal": "lose",
  "proteinPerKg": 1.9,
  "tdee": 2376,
}
`;

exports[`the numbers the Fitness hub shows now athletic, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2930,
    "hasMetrics": true,
    "macros": {
      "carbG": 393,
      "fatG": 91,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 2336,
    "hasMetrics": true,
    "macros": {
      "carbG": 285,
      "fatG": 73,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2633,
    "hasMetrics": true,
    "macros": {
      "carbG": 339,
      "fatG": 82,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 2039,
    "hasMetrics": true,
    "macros": {
      "carbG": 233,
      "fatG": 63,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 3228,
    "hasMetrics": true,
    "macros": {
      "carbG": 447,
      "fatG": 100,
      "proteinG": 135,
    },
    "missing": [],
    "nutritionGoal": "maintain",
    "proteinPerKg": 1.8,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now buildMuscle, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 3223,
    "hasMetrics": true,
    "macros": {
      "carbG": 438,
      "fatG": 97,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 2569,
    "hasMetrics": true,
    "macros": {
      "carbG": 319,
      "fatG": 77,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2896,
    "hasMetrics": true,
    "macros": {
      "carbG": 378,
      "fatG": 87,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 2242,
    "hasMetrics": true,
    "macros": {
      "carbG": 260,
      "fatG": 67,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 3550,
    "hasMetrics": true,
    "macros": {
      "carbG": 497,
      "fatG": 107,
      "proteinG": 150,
    },
    "missing": [],
    "nutritionGoal": "gain",
    "proteinPerKg": 2,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now fatLoss, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2403,
    "hasMetrics": true,
    "macros": {
      "carbG": 278,
      "fatG": 80,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 1915,
    "hasMetrics": true,
    "macros": {
      "carbG": 192,
      "fatG": 64,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2159,
    "hasMetrics": true,
    "macros": {
      "carbG": 235,
      "fatG": 72,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 1672,
    "hasMetrics": true,
    "macros": {
      "carbG": 149,
      "fatG": 56,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 2678,
    "hasMetrics": true,
    "macros": {
      "carbG": 326,
      "fatG": 89,
      "proteinG": 143,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 1.9,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now leanDefine, at every activity level 1`] = `
{
  "active": {
    "bmr": 1699,
    "calorieTarget": 2403,
    "hasMetrics": true,
    "macros": {
      "carbG": 274,
      "fatG": 75,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2930,
  },
  "light": {
    "bmr": 1699,
    "calorieTarget": 1915,
    "hasMetrics": true,
    "macros": {
      "carbG": 186,
      "fatG": 60,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2336,
  },
  "moderate": {
    "bmr": 1699,
    "calorieTarget": 2159,
    "hasMetrics": true,
    "macros": {
      "carbG": 231,
      "fatG": 67,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2633,
  },
  "sedentary": {
    "bmr": 1699,
    "calorieTarget": 1672,
    "hasMetrics": true,
    "macros": {
      "carbG": 143,
      "fatG": 52,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 2039,
  },
  "veryActive": {
    "bmr": 1699,
    "calorieTarget": 2678,
    "hasMetrics": true,
    "macros": {
      "carbG": 325,
      "fatG": 83,
      "proteinG": 158,
    },
    "missing": [],
    "nutritionGoal": "lose",
    "proteinPerKg": 2.1,
    "tdee": 3228,
  },
}
`;

exports[`the numbers the Fitness hub shows now sex "other", which the formula now refuses rather than resolves 1`] = `
{
  "bmr": null,
  "calorieTarget": null,
  "hasMetrics": true,
  "macros": null,
  "missing": [
    "sex",
  ],
  "nutritionGoal": "lose",
  "proteinPerKg": 1.9,
  "tdee": null,
}
`;
